splash and login page added

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,9 @@
 
 <body>
   <div id="root"></div>
-
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPR36Z9Vgkljim-fOObTGEUn159zRFBww&libraries=places&callback=initMap">
+    </script>
   <!-- <script src="/dist/bundle.js"></script> -->
 </body>
 
